# FlavorForge-backend

./: README.md  pyproject.toml
app/: main.py
app/models/: schemas.py
app/routers/: route.py
data/: competitors.csv  products.csv  trends_ingredients.csv  trends_regional.csv  trends_timeline.csv
src/data/: ai_suggestions.csv  dashboard.csv
