[project]
name = "app"
version = "0.1.0"
description = "A modular FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Add this section to configure hatchling
[tool.hatch.build.targets.sdist]
packages = ["src"]